taylor using horners rule w recursion

--- a/5_recursion/69_taylor_2/CMakeLists.txt
+++ b/5_recursion/69_taylor_2/CMakeLists.txt
@@ -2,4 +2,4 @@
 
 PROJECT(taylor2)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
-add_executable(taylor2 loopVersion.c)
+add_executable(taylor2 recursVersion.c)
