--- a/5_recursion/72_fibonacci/CMakeLists.txt
+++ b/5_recursion/72_fibonacci/CMakeLists.txt
@@ -1,3 +1,8 @@
 PROJECT(fibSequence)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
-add_executable(fibSequence main.c)
+
+set(CMAKE_C_STANDARD 99)
+
+add_executable(fibSequence main_memoization.c)
+
+target_compile_features(fibSequence PRIVATE c_std_99)
