--- a/7_array_adts/array_adt_script_2/CMakeLists.txt
+++ b/7_array_adts/array_adt_script_2/CMakeLists.txt
@@ -1,6 +1,6 @@
 #Make Basic CMake project for C++17
 
-PROJECT(arrayGeneral)
+PROJECT(arrayGeneral2)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
 
 #Set to C99
@@ -9,4 +9,4 @@ set(CMAKE_C_STANDARD 99)
 #allow vscode to find compile commands
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_executable(arrayGeneral main.c arrayAdt.c arrayAdt.h)
+add_executable(arrayGeneral2 main.c arrayAdt.c arrayAdt.h)
