Update CMakeLists.txt for static analysis

--- a/7_array_adts/challenge1_findMissingElems/CMakeLists.txt
+++ b/7_array_adts/challenge1_findMissingElems/CMakeLists.txt
@@ -1,12 +1,26 @@
-#Make Basic CMake project for C++17
+cmake_minimum_required(VERSION 3.6)
+project(challenge1)
 
-PROJECT(challenge1)
-CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
-
-#Set to C99
+# Set the C standard to C99
 set(CMAKE_C_STANDARD 99)
 
-#allow vscode to find compile commands
+# Allow vscode to find compile commands
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+# Add executable target
 add_executable(challenge1 main.c arrayAdt.c arrayAdt.h)
+
+# Add a custom target for Cppcheck
+add_custom_target(
+    cppcheck
+    COMMAND cppcheck
+    --enable=all
+    --inconclusive
+    --std=c99
+    ${CMAKE_SOURCE_DIR}/main.c
+    ${CMAKE_SOURCE_DIR}/arrayAdt.c
+    COMMENT "Running Cppcheck"
+)
+
+# Make Cppcheck target dependent on the desired build target
+add_dependencies(cppcheck challenge1)
