--- a/9_matrices/CMakeLists.txt
+++ b/9_matrices/CMakeLists.txt
@@ -5,6 +5,7 @@ project(Matrices)
 add_subdirectory(143_diagMatrix)
 add_subdirectory(145_lowSRMatrix)
 add_subdirectory(148_lowSCMatrix)
+add_subdirectory(151_upSRMatrix)
 
 # Specify the include directories
 include_directories(include)
