Recursive linked list display done

--- a/11_linked_lists/CMakeLists.txt
+++ b/11_linked_lists/CMakeLists.txt
@@ -3,6 +3,7 @@ project(LinkedLists)
 
 # Add subdirectories for each sub-project
 add_subdirectory(175_showLinkedList)
+add_subdirectory(177_showRecursLinkedList)
 
 # Specify the include directories
 include_directories(include)
