Max figured out - also readme fixed

--- a/11_linked_lists/CMakeLists.txt
+++ b/11_linked_lists/CMakeLists.txt
@@ -5,6 +5,8 @@ project(LinkedLists)
 add_subdirectory(175_showLinkedList)
 add_subdirectory(177_showRecursLinkedList)
 add_subdirectory(180_countAndSum)
+add_subdirectory(182_max)
+
 
 # Specify the include directories
 include_directories(include)
