Added a reverse func

--- a/11_linked_lists/CMakeLists.txt
+++ b/11_linked_lists/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(184_search)
 add_subdirectory(191_insert)
 add_subdirectory(193_delete)
 add_subdirectory(197_removeDuplicates)
+add_subdirectory(201_reverseList)
 
 # Specify the include directories
 include_directories(include)
