Added skeleton for merging lists

--- a/11_linked_lists/CMakeLists.txt
+++ b/11_linked_lists/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(191_insert)
 add_subdirectory(193_delete)
 add_subdirectory(197_removeDuplicates)
 add_subdirectory(201_reverseList)
+add_subdirectory(204_mergelists)
 
 # Specify the include directories
 include_directories(include)
