--- a/11_linked_lists/CMakeLists.txt
+++ b/11_linked_lists/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(210_circularlists)
 add_subdirectory(222_doublylinkedlist)
 add_subdirectory(226_studentChallenge1_findMiddle)
 add_subdirectory(227_studentChallenge2_intersect)
+add_subdirectory(mergeSortTest)
 
 # Specify the include directories
 include_directories(include)
