Made 249 post fix version2

--- a/13_stack/CMakeLists.txt
+++ b/13_stack/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(234_stackArray)
 add_subdirectory(237_stackLL)
 add_subdirectory(241_parentheses)
 add_subdirectory(246_postfixConversion1)
+add_subdirectory(249_postfixConversion2)
 
 # Specify the include directories
 include_directories(include)
