post fix evaluate started

--- a/13_stack/CMakeLists.txt
+++ b/13_stack/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(237_stackLL)
 add_subdirectory(241_parentheses)
 add_subdirectory(246_postfixConversion1)
 add_subdirectory(249_postfixConversion2)
+add_subdirectory(252_postfixEvaluation)
 
 # Specify the include directories
 include_directories(include)
