Circular queue done

--- a/14_queues/CMakeLists.txt
+++ b/14_queues/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.6)
-project(queue)
+project(queues)
 
 # Add subdirectories for each sub-project
 add_subdirectory(257_queue)
+add_subdirectory(261_circularQueue)
 
 # Specify the include directories
 include_directories(include)
 
 # Add the utility files to a library
-add_library(utils src/queue.c)
+add_library(utils src/queue.c src/queueCircular.c)
