--- a/15_trees/CMakeLists.txt
+++ b/15_trees/CMakeLists.txt
@@ -8,4 +8,4 @@ add_subdirectory(299_binTree)
 include_directories(include)
 
 # Add the utility files to a library
-add_library(utils src/queueCircular.c src/binTree.c src/arrayAdt.c)
+add_library(utils src/queueCircular.c src/binTree.c src/arrayAdt.c src/stackarr.c)
