preOrder to BST created

--- a/16_BST/CMakeLists.txt
+++ b/16_BST/CMakeLists.txt
@@ -4,6 +4,7 @@ project(bst)
 # Add subdirectories for each sub-project
 add_subdirectory(305_createBST)
 add_subdirectory(307_deleteNodesBST)
+add_subdirectory(309_BSTfromPO)
 
 # Specify the include directories
 include_directories(include)
