--- a/17_AVL/CMakeLists.txt
+++ b/17_AVL/CMakeLists.txt
@@ -8,4 +8,4 @@ add_subdirectory(317_AVLTrees)
 include_directories(include)
 
 # Add the utility files to a library
-add_library(utils src/avl.c src/queueCircular.c src/binTree.c src/arrayAdt.c src/stackarr.c)
+add_library(utils src/avl.c src/bst.c src/queueCircular.c src/binTree.c src/arrayAdt.c src/stackarr.c)
