--- a/19_heap/332_sortHeap/CMakeLists.txt
+++ b/19_heap/332_sortHeap/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(HeapInsert)
+project(HeapSort)
 
 # Set the C standard to C99
 set(CMAKE_C_STANDARD 99)
@@ -9,11 +9,11 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 # Add executable target
-add_executable(HeapInsert main.c)
+add_executable(HeapSort main.c)
 
 
 # Specify the include directories
-target_include_directories(HeapInsert PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+target_include_directories(HeapSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
 # Add the source files to your target
-target_sources(HeapInsert PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/heap.c)
+target_sources(HeapSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/heap.c)
