insertion sort done i think

--- a/20_sortingAlgs/CMakeLists.txt
+++ b/20_sortingAlgs/CMakeLists.txt
@@ -3,6 +3,7 @@ project(sortAlgs)
 
 # Add subdirectories for each sub-project
 add_subdirectory(338_bubbleSort)
+add_subdirectory(341_insertionSort)
 
 # Specify the include directories
 include_directories(include)
