--- a/20_sortingAlgs/341_insertionSort/CMakeLists.txt
+++ b/20_sortingAlgs/341_insertionSort/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(BubbleSort)
+project(InsertionSort)
 
 # Set the C standard to C99
 set(CMAKE_C_STANDARD 99)
@@ -9,11 +9,11 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 # Add executable target
-add_executable(BubbleSort main.c)
+add_executable(InsertionSort main.c)
 
 
 # Specify the include directories
-target_include_directories(BubbleSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+target_include_directories(InsertionSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
 # Add the source files to your target
-target_sources(BubbleSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/sortAlgs.c)
+target_sources(InsertionSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/sortAlgs.c)
