Selection Sort done

--- a/20_sortingAlgs/CMakeLists.txt
+++ b/20_sortingAlgs/CMakeLists.txt
@@ -4,6 +4,7 @@ project(sortAlgs)
 # Add subdirectories for each sub-project
 add_subdirectory(338_bubbleSort)
 add_subdirectory(341_insertionSort)
+add_subdirectory(348_selectionSort)
 
 # Specify the include directories
 include_directories(include)
