--- a/20_sortingAlgs/CMakeLists.txt
+++ b/20_sortingAlgs/CMakeLists.txt
@@ -5,6 +5,7 @@ project(sortAlgs)
 add_subdirectory(338_bubbleSort)
 add_subdirectory(341_insertionSort)
 add_subdirectory(348_selectionSort)
+add_subdirectory(353_quickSort)
 
 # Specify the include directories
 include_directories(include)
