--- a/20_sortingAlgs/353_quickSort/CMakeLists.txt
+++ b/20_sortingAlgs/353_quickSort/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(SelectionSort)
+project(QuickSort)
 
 # Set the C standard to C99
 set(CMAKE_C_STANDARD 99)
@@ -9,11 +9,11 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 # Add executable target
-add_executable(SelectionSort main.c)
+add_executable(QuickSort main.c)
 
 
 # Specify the include directories
-target_include_directories(SelectionSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+target_include_directories(QuickSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
 # Add the source files to your target
-target_sources(SelectionSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/sortAlgs.c)
+target_sources(QuickSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/sortAlgs.c)
