Count sort done

--- a/20_sortingAlgs/CMakeLists.txt
+++ b/20_sortingAlgs/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(348_selectionSort)
 add_subdirectory(353_quickSort)
 add_subdirectory(356_mergeSortI)
 add_subdirectory(358_mergeSortR)
+add_subdirectory(360_countSort)
 
 # Specify the include directories
 include_directories(include)
