--- a/20_sortingAlgs/363_shellSort/CMakeLists.txt
+++ b/20_sortingAlgs/363_shellSort/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(RadixSort)
+project(ShellSort)
 
 # Set the C standard to C99
 set(CMAKE_C_STANDARD 99)
@@ -9,11 +9,11 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 # stAdd executable target
-add_executable(RadixSort main.c)
+add_executable(ShellSort main.c)
 
 
 # Specify the include directories
-target_include_directories(RadixSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+target_include_directories(ShellSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
 # Add the source files to your target
-target_sources(RadixSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/sortAlgs.c)
+target_sources(ShellSort PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/sortAlgs.c)
