Added shellsort into outer cmakelists

--- a/20_sortingAlgs/CMakeLists.txt
+++ b/20_sortingAlgs/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(356_mergeSortI)
 add_subdirectory(358_mergeSortR)
 add_subdirectory(360_countSort)
 add_subdirectory(362_radixSort)
+add_subdirectory(363_shellSort)
 
 # Specify the include directories
 include_directories(include)
