--- a/22_graphs/377_breadthFS/CMakeLists.txt
+++ b/22_graphs/377_breadthFS/CMakeLists.txt
@@ -16,4 +16,4 @@ add_executable(BFS main.c)
 target_include_directories(BFS PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
 # Add the source files to your target
-target_sources(BFS PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/graphs.c ${CMAKE_CURRENT_SOURCE_DIR}/../src/queueCircular.c)
+target_sources(BFS PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/graphs.c ${CMAKE_CURRENT_SOURCE_DIR}/../src/queueCircular.c ${CMAKE_CURRENT_SOURCE_DIR}/../src/stackarr.c)
