Kruskal's alg started

--- a/22_graphs/CMakeLists.txt
+++ b/22_graphs/CMakeLists.txt
@@ -5,6 +5,7 @@ project(graphs)
 add_subdirectory(377_breadthFS)
 add_subdirectory(379_depthFS)
 add_subdirectory(384_prims)
+add_subdirectory(388_kruskals)
 
 # Specify the include directories
 include_directories(include)
